manifests/price-monitoring-integration/backend-migrate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-migrate-deployment
  namespace: price-monitoring-integration
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-migrate
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-migrate
    spec:
      containers:
        - name: backend-migrate
          image: docker-registry.kuroweb.net/price-monitoring-backend-integration:1ee55cba8cbb1956ec19af40f86e5c07a2debb57
          command:
            [
              "/bin/sh", "-c",
              "RAILS_ENV=integration rails db:create && \
               RAILS_ENV=integration rails db:migrate && \
               ./bin/rails server -b 0.0.0.0 -p 3000 -e integration"
            ]
