manifests/price-monitoring-integration/backend-batch-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-batch-1-service
  namespace: price-monitoring-integration
spec:
  selector:
    app: price-monitoring
    server: backend-batch-1
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-1-deployment
  namespace: price-monitoring-integration
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-batch-1
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-batch-1
    spec:
      containers:
        - name: backend-batch-1
          image: docker-registry.kuroweb.net/price-monitoring-backend-integration:73898b80e8efd2e693ca69ec68f14bff7a822368
          command: ["sidekiq", "-C", "config/sidekiq/crawl_process.yml", "-e", "integration"]
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              cpu: "500m"
