manifests/price-monitoring-integration/backend-batch-3.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-batch-3-service
  namespace: price-monitoring-integration
spec:
  selector:
    app: price-monitoring
    server: backend-batch-3
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-3-deployment
  namespace: price-monitoring-integration
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-batch-3
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-batch-3
    spec:
      containers:
        - name: backend-batch-3
          image: docker-registry.kuroweb.net/price-monitoring-backend-integration:fd353775b2140ae7be467ee8bea353d407a2f076
          command: ["sidekiq", "-C", "config/sidekiq/crawl_process_2.yml", "-e", "integration"]
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              cpu: "500m"
