manifests/price-monitoring-integration/backend-batch-4.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-batch-4-service
  namespace: price-monitoring-integration
spec:
  selector:
    app: price-monitoring
    server: backend-batch-4
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-batch-4-deployment
  namespace: price-monitoring-integration
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-batch-4
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-batch-4
    spec:
      containers:
        - name: backend-batch-4
          image: docker-registry.kuroweb.net/price-monitoring-backend:1ee55cba8cbb1956ec19af40f86e5c07a2debb57
          command: ["sidekiq", "-C", "config/sidekiq/crawl_process_3.yml", "-e", "production"]
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              cpu: "500m"
