manifests/price-monitoring-integration/backend-playwright.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-playwright-service
  namespace: price-monitoring-integration
spec:
  selector:
    app: price-monitoring
    server: backend-playwright
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
  loadBalancerIP: 10.15.100.225

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-playwright-deployment
  namespace: price-monitoring-integration
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: backend-playwright
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend-playwright
    spec:
      containers:
        - name: backend-playwright
          image: docker-registry.kuroweb.net/price-monitoring-backend-playwright:66061f6d
          ports:
            - name: http
              containerPort: 8888
          resources:
            limits:
              cpu: "500m"
