manifests/price-monitoring-integration/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: price-monitoring-integration
spec:
  selector:
    app: price-monitoring
    server: backend
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  loadBalancerIP: 10.15.100.228

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: price-monitoring-integration
  labels:
    app: price-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-monitoring
      server: backend
  template:
    metadata:
      labels:
        app: price-monitoring
        server: backend
    spec:
      containers:
        - name: backend
          image: docker-registry.kuroweb.net/price-monitoring-backend:1ee55cba8cbb1956ec19af40f86e5c07a2debb57
          command: ["./bin/rails", "server", "-b", "0.0.0.0", "-p", "3000", "-e", "production"]
          ports:
            - name: http
              containerPort: 3000
